@@ -12,7 +12,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.scheduling.annotation.Scheduled;
 
-import java.util.Arrays;
+import java.util.List;
 
 @EnableCaching
 @Configuration
@@ -23,14 +23,14 @@ public class CacheConfig {
   @Bean
   public CacheManager cacheManager() {
     SimpleCacheManager cacheManager = new SimpleCacheManager();
-    cacheManager.setCaches(Arrays.asList(new ConcurrentMapCache("tournaments")));
+    cacheManager.setCaches(List.of(new ConcurrentMapCache("tournaments")));
     return cacheManager;
   }
 
   @CacheEvict(value = "tournaments", allEntries = true)
   @Scheduled(fixedRateString = "${empty-cache-frequency}")
   public void emptyCache() {
-    LOGGER.info("Emptying tournaments cache at " + Utils.getCurrentTime());
+    LOGGER.info("Emptying tournaments cache at {}", Utils.getCurrentTime());
   }
 
 }
